<resources>
    <string name="app_name">ADHD Journal</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="intro_header">What would you like to do today?</string>
    <string name="home_header2">What would you like to record today?</string>
    <string name="subject">Subject</string>
    <string name="lines">lines</string>
    <string name="timestamp">timestamp</string>
    <string name="new_record">New record</string>
    <string name="save_note">Save Note</string>
    <string name="edit_record">Edit record</string>
    <string name="record">Record</string>
    <string name="password">Password</string>
    <string name="layout_option_summary">Customize how you want to view the layout for choosing
items</string>
    <string name="enable_password">Enable Password?</string>
    <string name="disabled">DISABLED</string>
    <string name="enabled">ENABLED</string>
    <string name="welcome_back_log_in_to_view_your_journal">Welcome Back! Log in to view your journal.</string>
    <string name="enter">Enter</string>
    <string-array name="vertical_linear_labels">
        <item>Vertical</item>
        <item>Horizontal</item>
    </string-array>
    <string-array name="vertical_linear_values">
        <item>vertical</item>
        <item>horizontal</item>
    </string-array>
    <string-array name="layoutOptionLabels_Array">
        <item>Linear</item>
        <item>Staggered</item>
        <item>Grid</item>
    </string-array>
    <string-array name="layoutOptionValues_Array">
        <item>linear</item>
        <item>staggered</item>
        <item>grid</item>
    </string-array>
    <string name="dev_email_uri">mailto:Boomersooner12345@gmail.com</string>
    <string name="success">Success</string>
    <string name="avg_rating">Average Rating:</string>
    <string-array name="symptom_array">
    <item>Impulsiveness</item>
    <item>Impatience</item>
    <item>Hyperactivity</item>
    <item>Working Memory Issues</item>
        <item>Executive Dysfunction </item>
    <item>Mental Sluggishness/Dopamine Hunt</item>
    <item>Having a bad day</item>
    <item>Distractions</item>
    <item>Brain Fog</item>
    <item>No Symptoms</item>
    <item>Positive Environment/Grace</item>
    <item>Momentum driven</item>
    <item>Sensory Overload</item>
        <item>A small/big win today</item>
        <item>Unable to focus</item>
        <item>Struggling to focus</item>
        <item>Hyperfocus</item>
        <item>ADHD Burnout</item>
        <item>Lacking Motivation</item>
        <item>Stress enhanced ADHD Response</item>
        <item>Existential crisis</item>
        <item>Freeze/Mental Paralysis</item>
        <item>Procrastination</item>
    <item>Emotional Flooding</item>
    <item>Emotion fueled response</item>
    <item>Emotional Meltdown</item>
    <item>Rejection Sensitivity Dysphoria</item>
    <item>Depression</item>
    <item>Anxiety</item>
    </string-array>
</resources>